--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,15 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+h2 {
+  font-weight: 700;
+  color: rgb(16, 2, 92);
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+ul {
+  margin: 15px 0;
+  padding: 0;
+  list-style: none;
+}
